[project]
name = "mcp-server-nodriver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "nodriver>=0.48.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_nodriver"]


[project.scripts]
mcp-server-nodriver = "mcp_server_nodriver:main"

